# MinimumOrderSensorless

./: .gitignore  ACMPlot2024.py  CMakeLists.txt  CopySimToExp.py
acmsimcv5/: ACMConfig.h  ACMSim.h  im_controller.c  im_controller.h  im_observer.c  im_observer.h  induction_motor.c  induction_motor.h  inverter.c  inverter.h  load.c  load.h  main.c  measurement.c  measurement.h  pid_regulator.c  pid_regulator.h  pmsm_comm.c  pmsm_controller.c  pmsm_controller.h  pmsm_observer.c  pmsm_observer.h  satlut.h  sweep_frequency.h  synchronous_motor.c  synchronous_motor.h  utility.c
